tests/indexed-types/should_compile/T16632.hs
{-# LANGUAGE TypeFamilies #-}
module T16632 where

type family F a b c
type instance F Char b Int = ()
